team activity 6 complete

--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -21,6 +21,8 @@
         <h2>My Cart</h2>
 
         <ul class="product-list">
+      
+        
           <!-- <li class="cart-card divider">
             <a href="product_pages/marmot-ajax-3.html" class="cart-card__image">
               <img
@@ -52,6 +54,10 @@
             <p class="cart-card__price">$199.99</p>
           </li> -->
         </ul>
+        <div>
+          <a href="/checkout/index.html">Checkout</a>
+          <p class="list-total">Total:</p>
+        </div>
       </section>
     </main>
 
